# oracle-observer-sample

./: .gitignore  README.md
.github/workflows/: rust.yml
oracle-ingestor-lambda/: Cargo.toml  README.md  build.sh
oracle-ingestor-lambda/migrations/: 0001_mobile_poc_rewards.sql  0002_iot_poc_rewards.sql  1_radio_rewards.sql  2_lora_poc_rewards.sql
oracle-ingestor-lambda/src/: main.rs
oracle-observer-api/: README.md  package.json
oracle-observer-api/src/: db.ts  index.ts  knexfile.ts
