[package]
name = "oracle-ingestor-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = {version = "0", features = ["serde"]}
helium-crypto = {version = "0.6.3"}
helium-proto = {git = "https://github.com/helium/proto", branch = "master", features = ["services"]}
file-store = {git = "https://github.com/helium/oracles", branch = "main"}
futures = "*"
lambda_runtime = "0.7"
serde =  {version = "1", features=["derive"]}
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = "0"
